home en specialisten page aangepast

--- a/app/www/views/home.html
+++ b/app/www/views/home.html
@@ -3,23 +3,27 @@
   <div data-page="home" class="page">
 
     <div class="page-content map_div">
+      <div class="overlay"></div>
+    
+      <a href="" class="map-icon settings"><i class="ion-gear-a color-teal"></i></a>
 
-      <a href=""><img src="dir/img/settings.png" class="settings_icoon settings_icoon_bg"></a>
+      <a href="views/specialisten.html" class="map-icon eye-specialist"><i class="ion-eye color-blue"></i></a>
               
-      <div class="legende">
-
+      <div class="legende bg-white">
         <a href="#" class="floating-button color-teal">
           <i class="icon ion-plus"></i>
         </a>
 
         <div class="content-block">
           <h1>Legende</h1>
-
-          <p><img src="dir/img/eye.png" class="icoon_legende  m-r-30 m-b-20 bg-white"><span>Oogspecialist</span></p>
-          <p><img src="dir/img/heart-pulse.png" class="icoon_legende  m-r-30 m-b-20 bg-white"><span>Hart chirurg</span></p>
-          <p><img src="dir/img/diëtist.png" class="icoon_legende  m-r-30 m-b-20 bg-white"><span>Diëtist</span></p>
-          <p><img src="dir/img/emoticon-sad.png" class="icoon_legende  m-r-30 m-b-20 bg-white"><span>Psycholoog</span></p>
-          <p><img src="dir/img/pill.png" class="icoon_legende  m-r-30 m-b-20 bg-white"><span>Apotheek</span></p>
+          <div class="legend-content">
+            <p><i class="ion-eye color-blue"></i><span>Oogspecialist</span></p>
+            <p><i class="ion-heart color-red"></i><span>Hart Chirurg</span></p>
+            <p><i class="ion-pizza color-green"></i><span>Diëtist</span></p>
+            <p><i class="ion-sad-outline color-indigo"></i><span>Psycholoog</span></p>
+            <p><i class="ion-medkit color-amber"></i><span>Apotheek</span></p>
+          </div>
+          
         </div>
       </div>
 
