pagina af behalve calendar

--- a/app/www/views/specialisten.html
+++ b/app/www/views/specialisten.html
@@ -43,6 +43,9 @@
           <span class="color-black">www.oogbijandwele.sr</span>
         </a><br>
       </div>
+      <div class="content-block">
+        <p><a href="#" class="button active bg-teal color-white">Afspraak maken</a></p>
+      </div>
     </div>
 
   </div>
