--- a/app/www/dir/css/my-app.css
+++ b/app/www/dir/css/my-app.css
@@ -25,6 +25,12 @@ body{
 .m-b-20{
 	margin-bottom: 20px !important;
 }
+.midde{
+	text-align: center !important;
+}
+.text_rood{
+	color: red !important;
+}
 
 /*CUSTOM CLASSES*/
 .map_div{
@@ -71,6 +77,7 @@ body{
 	width: 100%;
 	height: 300px;
 	overflow: hidden;
+	background-color: black;
 }
 .specialist-detail img{
 	height: 100%;
@@ -109,20 +116,6 @@ body{
 	opacity: 0.2;
 	box-shadow: 0 1px 10px rgba(0, 0, 0, 1);
 }
-/*dommy knop gemaakt*/
-.dommy_icoon{
-	position: relative;
-	top: 100px;
-	left: 100px;
-	-webkit-border-radius:1100%;
-	-moz-border-radius:100%;
-	-o-border-radius:100%;
-	border-radius:100%;
-	background-color: #fff;
-	box-shadow: 0 1px 10px rgba(0, 0, 0, 1);
-	height: 60px;
-	width: auto;
-}
 
 /*detail pagina style*/
 .detail_info{
@@ -138,4 +131,16 @@ body{
 	bottom: 10px;
 	width: 100%;
 	margin: 10px;
+}
+
+/*afspraken maken style*/
+.img_opacity{
+	opacity: 0.4;
+	background-color: black;
+}
+.naam{
+	position: absolute;
+	top: 300px;
+	background-color: initial;
+
 }
