--- a/app/www/views/ziek1.html
+++ b/app/www/views/ziek1.html
@@ -4,34 +4,69 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="left">
-          <a href="#" class=" link">
-        	<img src="dir/img/information-variant.png">
+          <a href="views/home.html" class="link back">
+            <i class="icon ion-chevron-left"></i>
            </a>
         </div>
-        <div class="center">Afspraak</div>
-        <div class="right">
-        	<a href="#" class=" link">
-        		<img src="dir/img/window-close.png">
-           </a>
-        </div>
+        <div class="center">Ziek1</div>
+        <div class="right"></div>
       </div>
     </div>
 
     <div class="page-content">
       <div class="specialist-detail">
-        <img src="dir/img/doctor.jpg" class="img_opacity">
+        <img src="dir/img/illnes.jpg" class="img_opacity">
       </div>
       <div class="content-block">
-      	<span class="naam color-white">Dr. Andwele R.</span>
+      	<span class="naam color-white">.</span>
       </div>
 
       <div class="content-block">
-        <!-- content -->
-      </div>
-      <div class="content-block">
-        <p><a href="#" class="button active bg-teal color-white">Afspraak maken</a></p>
-      </div>
+          <div class="list-block accordion-list">
+            <ul>
+              <li class="accordion-item"><a href="#" class="item-content item-link">
+                  <div class="item-inner">
+                    <div class="item-title">Omschrijving</div>
+                  </div></a>
+                <div class="accordion-item-content">
+                  <div class="content-block">
+                    <p>Item 1 content. Lorem ipsum dolor sit amet...</p>
+                  </div>
+                </div>
+              </li>
+              <li class="accordion-item"><a href="#" class="item-content item-link">
+                  <div class="item-inner">
+                    <div class="item-title">Symptomen</div>
+                  </div></a>
+                <div class="accordion-item-content">
+                  <div class="content-block">
+                    <p>Item 2 content. Lorem ipsum dolor sit amet...</p>
+                  </div>
+                </div>
+              </li>
+              <li class="accordion-item"><a href="#" class="item-content item-link">
+                  <div class="item-inner">
+                    <div class="item-title">Wat u alvast kunt doen</div>
+                  </div></a>
+                <div class="accordion-item-content">
+                  <div class="content-block">
+                    <p>Item 2 content. Lorem ipsum dolor sit amet...</p>
+                  </div>
+                </div>
+              </li>
+              <li class="accordion-item"><a href="#" class="item-content item-link">
+                  <div class="item-inner">
+                    <div class="item-title">Bezoek uw huisarts</div>
+                  </div></a>
+                <div class="accordion-item-content">
+                  <div class="content-block">
+                    <p>Item 2 content. Lorem ipsum dolor sit amet...</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
     </div>
-
   </div>
 </div>  
