--- a/app/www/views/account.html
+++ b/app/www/views/account.html
@@ -1,5 +1,7 @@
 <div class="pages">
-  <div data-page="about" class="page navbar-fixed theme-teal">
+  <div data-page="account" class="page navbar-fixed theme-teal">
+    
+    <div class="white-overlay"></div>
 
     <div class="navbar">
       <div class="navbar-inner">
@@ -13,8 +15,8 @@
         </div>
       </div>
     </div>
-    <div class="page-content">
 
+    <div class="page-content">
       <div class="list-block">
         <ul>
           <!-- Text inputs -->
@@ -42,8 +44,8 @@
               <div class="item-inner">
                 <div class="item-input">
                   <select>
-                    <option>Male</option>
-                    <option>Female</option>
+                    <option>Man</option>
+                    <option>Vrouw</option>
                   </select>
                 </div>
               </div>
