--- a/app/www/views/instellingen.html
+++ b/app/www/views/instellingen.html
@@ -1,14 +1,14 @@
 <div class="pages">
-  <div data-page="about" class="page navbar-fixed theme-teal">
+  <div data-page="instellingen" class="page navbar-fixed theme-teal">
 
     <div class="navbar">
       <div class="navbar-inner">
         <div class="left">
-          <a href="#" class="back link">
+          <a href="views/home.html" class="link">
             <i class="icon ion-chevron-left"></i>
            </a>
         </div>
-        <div class="center">Setting</div>
+        <div class="center">Instellingen</div>
         <div class="right"></div>
       </div>
     </div>
@@ -18,7 +18,7 @@
         <div class="list-block media-list">
           <ul>
             <li>
-              <a href="#" class="item-link item-content">
+              <a href="views/account.html" class="item-link item-content">
                 <div class="item-inner">
                   <div class="item-title-row">
                     <div class="item-title">Account</div>
@@ -30,7 +30,7 @@
               <a href="#" class="item-link item-content">
                 <div class="item-inner">
                   <div class="item-title-row">
-                    <div class="item-title">About Healthy.do</div>
+                    <div class="item-title">Over Healthy.do</div>
                   </div>
                 </div>
               </a>
