--- a/app/www/views/login.html
+++ b/app/www/views/login.html
@@ -1,10 +1,10 @@
 <div class="pages">
-  <div data-page="about" class="page navbar-fixed theme-teal">
+  <div data-page="login" class="page navbar-fixed theme-teal">
 
     <div class="navbar">
       <div class="navbar-inner">
         <div class="left">
-          <a href="#" class="back link">
+          <a href="views/instellingen.html" class="link">
             <i class="icon ion-chevron-left"></i>
            </a>
         </div>
@@ -39,8 +39,9 @@
       </div>
       <div class="content-block">
         <p><a href="#" class="button active bg-teal color-white">Log in</a></p>
+        <p class="text-center">Geen account? <a href="views/aanmelden.html" class="a-link">Aanmelden</a></p>
       </div>
-      <div class="midde"><u>Sign In</u></div>
+      
     </div>
 
   </div>
