--- a/app/www/views/aanmelden.html
+++ b/app/www/views/aanmelden.html
@@ -1,10 +1,10 @@
 <div class="pages">
-  <div data-page="about" class="page navbar-fixed theme-teal">
+  <div data-page="aamelden" class="page navbar-fixed theme-teal">
 
     <div class="navbar">
       <div class="navbar-inner">
         <div class="left">
-          <a href="#" class="back link">
+          <a href="views/login.html" class="link">
             <i class="icon ion-chevron-left"></i>
            </a>
         </div>
@@ -45,8 +45,8 @@
               <div class="item-inner">
                 <div class="item-input">
                   <select>
-                    <option>Male</option>
-                    <option>Female</option>
+                    <option>Man</option>
+                    <option>Vrouw</option>
                   </select>
                 </div>
               </div>
@@ -85,7 +85,7 @@
         <p><a href="#" class="button active bg-teal color-white">Aanmelden</a></p>
       </div>
       <div class="content-block">
-        <p class="midde">Door aan te melden gaat u akkoord met de vogelde <a class="text_rood" href="#">Voorwaarde</a></p>
+        <p class="text-center">Door aan te melden gaat u akkoord met de volgende <a class="color-red a-link" href="#">voorwaarden</a></p>
       </div>
     </div>
 
