--- a/app/www/views/home.html
+++ b/app/www/views/home.html
@@ -5,7 +5,7 @@
     <div class="page-content map_div">
       <div class="overlay"></div>
     
-      <a href="" class="map-icon settings"><i class="ion-gear-a color-teal"></i></a>
+      <a href="views/instellingen.html" class="map-icon settings"><i class="ion-gear-a color-teal"></i></a>
 
       <a href="views/specialisten.html" class="map-icon eye-specialist"><i class="ion-eye color-blue"></i></a>
               
