--- a/app/www/views/home.html
+++ b/app/www/views/home.html
@@ -3,6 +3,8 @@
   <div data-page="home" class="page">
 
     <div class="page-content map_div">
+      <div id="map"></div>
+      
       <div class="overlay"></div>
     
       <a href="views/instellingen.html" class="map-icon settings"><i class="ion-gear-a color-teal"></i></a>
@@ -30,4 +32,4 @@
     </div>
 
   </div>
-</div>  
+</div>
