--- a/app/www/views/afspraak.html
+++ b/app/www/views/afspraak.html
@@ -26,7 +26,13 @@
       </div>
 
       <div class="content-block">
-        <!-- content -->
+        <div class="content-block-title">Disabled Dates</div>
+<div class="content-block-title">Inline with custom toolbar</div>
+<div class="content-block">
+  <div style="padding:0; margin-right:-15px; width:auto" class="content-block-inner">
+    <div id="calendar-inline-container"></div>
+  </div>
+</div>     
       </div>
       <div class="content-block">
         <p><a href="#" class="button active bg-teal color-white">Afspraak maken</a></p>
