--- a/app/www/views/home.html
+++ b/app/www/views/home.html
@@ -8,8 +8,7 @@
       <div class="overlay"></div>
     
       <a href="views/instellingen.html" class="map-icon settings"><i class="ion-gear-a color-teal"></i></a>
-
-      <a href="views/specialisten.html" class="map-icon eye-specialist"><i class="ion-eye color-blue"></i></a>
+      <a href="views/symptomen.html" class="map-icon symptoms"><i class="ion-ios-medkit color-teal"></i></a>
               
       <div class="legende bg-white">
         <a href="#" class="floating-button color-teal">
