--- a/app/www/dir/css/my-app.css
+++ b/app/www/dir/css/my-app.css
@@ -49,6 +49,18 @@ body{
   text-align: center;
   margin-top: 0;
 }
+.swiper-container {
+  height: 100%;
+}
+.swiper-slide {
+  background:#fff;
+}
+.swiper-slide span {
+  text-align:center;
+  display:block;
+  margin:20px;
+  font-size:21px;
+}
 /*CUSTOM CLASSES*/
 .map_div{
 	/*background: no-repeat center center fixed; */
@@ -129,17 +141,19 @@ body{
 	height: 56px;
 	border-radius: 56px;
 	font-size: 2.6em;
+	z-index: 3;
 	background-color: rgba(255,255,255,1);
 }
-.map-icon.settings{
-	top: 10px;
+.map-icon.settings, .map-icon.symptoms{
 	left: 10px;
 	font-size: 2em;
 	background-color: rgba(255,255,255,.8);
+} 
+.map-icon.settings{
+	bottom: 10%;
 }
-.map-icon.eye-specialist{
-	top: 35%;
-	left: 40%;
+.map-icon.symptoms{
+	bottom: 20%;
 }
 .specialist-detail{
 	width: 100%;
@@ -229,4 +243,14 @@ body{
 	top: 300px;
 	background-color: initial;
 
+}
+
+/*@media queries*/
+@media screen and (orientation: landscape) {
+   .map-icon.settings{
+	bottom: 15%;
+	}
+	.map-icon.symptoms{
+		bottom: 33%;
+	}
 }
