--- a/app/www/views/faq.html
+++ b/app/www/views/faq.html
@@ -4,6 +4,9 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="left">
+          <a href="views/instellingen.html" class="link">
+            <i class="icon ion-chevron-left"></i>
+           </a>
         </div>
         <div class="center">FAQ</div>
         <div class="right"></div>
