--- a/app/www/views/instellingen.html
+++ b/app/www/views/instellingen.html
@@ -27,6 +27,15 @@
               </a>
             </li>
             <li>
+              <a href="views/faq.html" class="item-link item-content">
+                <div class="item-inner">
+                  <div class="item-title-row">
+                    <div class="item-title">FAQ</div>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
               <a href="#" class="item-link item-content">
                 <div class="item-inner">
                   <div class="item-title-row">
