--- a/app/www/views/symptomen.html
+++ b/app/www/views/symptomen.html
@@ -8,7 +8,7 @@
             <i class="icon ion-chevron-left"></i>
            </a>
         </div>
-        <div class="center">Ziektesoorten of pijnen</div>
+        <div class="center">Ziektesoorten &amp; pijnen</div>
         <div class="right"></div>
       </div>
     </div>
