--- a/app/www/views/home.html
+++ b/app/www/views/home.html
@@ -6,26 +6,64 @@
       <div id="map"></div>
       
       <div class="overlay"></div>
-    
-      <a href="views/instellingen.html" class="map-icon settings"><i class="ion-gear-a color-teal"></i></a>
-      <a href="views/symptomen.html" class="map-icon symptoms"><i class="ion-ios-medkit color-teal"></i></a>
               
       <div class="legende bg-white">
-        <a href="#" class="floating-button color-teal">
-          <i class="icon ion-plus"></i>
-        </a>
-
-        <div class="content-block">
-          <h1>Legende</h1>
-          <div class="legend-content">
-            <p><i class="ion-eye color-blue"></i><span>Oogspecialist</span></p>
-            <p><i class="ion-heart color-red"></i><span>Hart Chirurg</span></p>
-            <p><i class="ion-pizza color-green"></i><span>Diëtist</span></p>
-            <p><i class="ion-sad-outline color-indigo"></i><span>Psycholoog</span></p>
-            <p><i class="ion-medkit color-amber"></i><span>Apotheek</span></p>
+        <div class="head">
+          <div class="left">
+            <p>Menu</p>
           </div>
-          
+          <div class="right">
+            <i class="ion-navicon"></i>
+          </div>
         </div>
+
+        <div class="content-block legend-content">
+          <p>Legende</p>
+          <div class="legende-item">
+            <div class="links"><i class="ion-eye color-blue"></i></div>
+            <div class="rechts"><span>Oogspecialist</span></div>
+          </div>
+          <div class="legende-item">
+            <div class="links"><i class="ion-heart color-red"></i></div>
+            <div class="rechts"><span>Hart Chirurg</span></div>
+          </div>
+          <div class="legende-item">
+            <div class="links"><i class="ion-pizza color-green"></i></div>
+            <div class="rechts"><span>Diëtist</span></div>
+          </div>
+          <div class="legende-item">
+            <div class="links"><i class="ion-sad-outline color-indigo"></i></div>
+            <div class="rechts"><span>Psycholoog</span></div>
+          </div>
+          <div class="legende-item">
+            <div class="links"><i class="ion-medkit color-amber"></i></div>
+            <div class="rechts"><span>Apotheek</span></div>
+          </div>
+        </div>
+
+        <div class="list-block media-list">
+          <ul>
+            <li>
+              <a href="views/instellingen.html" class="item-content item-link">
+                <div class="item-inner">
+                  <div class="item-title-row">
+                    <div class="item-title">Instellingen</div>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="views/symptomen.html" class="item-content item-link">
+                <div class="item-inner">
+                  <div class="item-title-row">
+                    <div class="item-title">Ziektesoorten &amp; Pijnen</div>
+                  </div>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+
       </div>
 
     </div>
