--- a/app/www/views/specialisten.html
+++ b/app/www/views/specialisten.html
@@ -1,6 +1,5 @@
-
 <div class="pages">
-  <div data-page="about" class="page navbar-fixed theme-teal">
+  <div data-page="specialisten" class="page navbar-fixed theme-teal">
 
     <div class="navbar">
       <div class="navbar-inner">
@@ -9,28 +8,28 @@
             <i class="icon ion-chevron-left"></i>
            </a>
         </div>
-        <div class="center">Dr. Andwele R.</div>
+        <div class="center" id="full_name"></div>
         <div class="right"></div>
       </div>
     </div>
 
     <div class="page-content bg-blue-gray-100">
       <div class="specialist-detail">
-        <img src="dir/img/doctor.jpg">
+        <img id="profile_picture" src="">
       </div>
 
       <div class="content-block">
-          <p class="detail-icon"><i class="ion-eye color-blue bg-white"></i><span>Oogspecialist</span></p>
+          <p class="detail-icon"><i class="ion-eye color-blue bg-white"></i><span></span></p>
 
-          <p class="detail-info-icon"><i class="ion-android-call"></i>451-213</p>
-          <p class="detail-info-icon"><i class="ion-android-mail"></i>andwele_r@live.com</p>
-          <p class="detail-info-icon"><i class="ion-location"></i>Henck Arron straat #41</p>
-          <p class="detail-info-icon"><i class="ion-earth"></i>www.checkjeoogbijandwele.sr</p>
+          <p class="detail-info-icon" id="phone"><i class="ion-android-call"></i></p>
+          <p class="detail-info-icon" id="email"><i class="ion-android-mail"></i></p>
+          <p class="detail-info-icon" id="adress"><i class="ion-location"></i></p>
+          <p class="detail-info-icon" id="website"><i class="ion-earth"></i></p>
       </div>
       <div class="content-block">
         <p><a href="#" class="button active bg-teal color-white">Afspraak maken</a></p>
       </div>
     </div>
 
-  </div>
+  </div>  
 </div>  
