Het zou handig zijn om de id's in een span te zetten. Kijk een voorbeeld van phone

--- a/app/www/views/specialisten.html
+++ b/app/www/views/specialisten.html
@@ -21,7 +21,7 @@
       <div class="content-block">
           <p class="detail-icon"><i class="ion-eye color-blue bg-white"></i><span></span></p>
 
-          <p class="detail-info-icon" id="phone"><i class="ion-android-call"></i></p>
+          <p class="detail-info-icon"><i class="ion-android-call"></i><span id="phone"></span></p>
           <p class="detail-info-icon" id="email"><i class="ion-android-mail"></i></p>
           <p class="detail-info-icon" id="adress"><i class="ion-location"></i></p>
           <p class="detail-info-icon" id="website"><i class="ion-earth"></i></p>
