ID's gezet in een span

--- a/app/www/views/specialisten.html
+++ b/app/www/views/specialisten.html
@@ -22,9 +22,9 @@
           <p class="detail-icon"><i class="ion-eye color-blue bg-white"></i><span></span></p>
 
           <p class="detail-info-icon"><i class="ion-android-call"></i><span id="phone"></span></p>
-          <p class="detail-info-icon" id="email"><i class="ion-android-mail"></i></p>
-          <p class="detail-info-icon" id="adress"><i class="ion-location"></i></p>
-          <p class="detail-info-icon" id="website"><i class="ion-earth"></i></p>
+          <p class="detail-info-icon"><i class="ion-android-mail"></i><span id="email"></span></p>
+          <p class="detail-info-icon"><i class="ion-location"></i><span id="address"></span></p>
+          <p class="detail-info-icon"><i class="ion-earth"></i><span id="website"></span></p>
       </div>
       <div class="content-block">
         <p><a href="#" class="button active bg-teal color-white">Afspraak maken</a></p>
