Man->male = m Vrouw->female = v

--- a/app/www/views/aanmelden.html
+++ b/app/www/views/aanmelden.html
@@ -46,8 +46,8 @@
                 <div class="item-input">
                   <select name="gender" required="">
                     <option value="">Kies uw gender</option>
-                    <option value="man">Man</option>
-                    <option value="vrouw">Vrouw</option>
+                    <option value="m">Man</option>
+                    <option value="f">Vrouw</option>
                   </select>
                 </div>
               </div>
